feat: Places API 사용
Places API 이용해서 장소 주소, 이름, 타입 불러오는 코드

좌표 이용해서 주소 변환
주소를 이용해서 PlaceID 찾아오기
PlaceID를 이용해서 주소, 이름, 타입 가져오기

API 오류가 계속 뜸
일단 중간 저장용으로 push

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">GolmokStar</string>
+    <string name="google_API_key" templateMergeStrategy="preserve" translatable="false" >AIzaSyCWUxonM9XPuHQui8mH1oo1c5RZCvbguJ8</string>
 </resources>
